tests/macros/modulesymbols/tmodulesymbols_error_not_symbol.nim
discard """
  errormsg: "node is not a symbol"
"""
import std/macros
macro syms(x: typed) = moduleSymbols(x)
syms(nil)